# saf

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml  cmake.yml
cmake/: Config.cmake.in  DisableInSourceBuildDir.cmake  TestingOptions.cmake
include/saf/: integers.h  version.h.in
include/saf/internal/: assert.h
include/saf/internal/limits/: int_max.h  int_min.h
src/: CMakeLists.txt
src/saf/: CMakeLists.txt
tests/: CMakeLists.txt
tests/saf/: CMakeLists.txt  IntegersFixture.hpp  test_integers_IsOverflowing.cpp  test_integers_IsUnderflowing.cpp
